log/build_2023-10-02_19-44-44/template_drone_control/stderr.log
/home/lrs-ubuntu/LRS/ros2_ws_group10/src/template_drone_control/src/template_drone_control_node.cpp:67:1: error: expected unqualified-id before ‘private’
   67 | private:
      | ^~~~~~~
/home/lrs-ubuntu/LRS/ros2_ws_group10/src/template_drone_control/src/template_drone_control_node.cpp: In function ‘int main(int, char**)’:
/home/lrs-ubuntu/LRS/ros2_ws_group10/src/template_drone_control/src/template_drone_control_node.cpp:75:5: error: ‘nacitatMapu’ was not declared in this scope
   75 |     nacitatMapu;
      |     ^~~~~~~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
